# polymesh

./: .gitignore  Cargo.toml  README.md  install.sh  publish.sh  test.pmf
.github/workflows/: build.yml
example_meshes/default_cube/: polymeta.json
example_meshes/default_cube/cube/: polymeta.bkp.json  polymeta.json
example_meshes/default_cube/cube/faces/neg_x/: mesh.json  polymeta.json
example_meshes/default_cube/cube/faces/neg_y/: mesh.json  polymeta.json
example_meshes/default_cube/cube/faces/neg_z/: mesh.json  polymeta.json
example_meshes/default_cube/cube/faces/pos_x/: mesh.json  polymeta.json
example_meshes/default_cube/cube/faces/pos_y/: mesh.json  polymeta.json
example_meshes/default_cube/cube/faces/pos_z/: mesh.json  polymeta.json
example_meshes/example_cube/: polymeta.json
example_meshes/example_cube/faces_gr/negative_x_geo/: mesh.json
example_meshes/example_cube/faces_gr/negative_y_geo/: mesh.json
example_meshes/example_cube/faces_gr/negative_z_geo/: mesh.json
example_meshes/example_cube/faces_gr/positive_x_geo/: mesh.json
example_meshes/example_cube/faces_gr/positive_y_geo/: mesh.json
example_meshes/example_cube/faces_gr/positive_z_geo/: mesh.json  polymeta.json
example_meshes/generated_cube/: cube.pmf
example_meshes/polymesh_logo/: logo.pmf  logo.vox
example_meshes/vox2pmf/: example.pmf  example.vox
libpolymesh/: Cargo.toml
libpolymesh/src/: lib.rs  polymesh.rs  prelude.rs
libpolymesh/src/common/: mesh.rs  mod.rs
libpolymesh/src/common/serialization/data/: mesh.rs  mod.rs  polymeta.rs
libpolymesh/src/common/transform/: color.rs  mod.rs  vector.rs
libpolymesh/src/create/shapes/: hexahedron.rs  mod.rs  quad.rs
libpolymesh/src/file/: compressed.rs  extracted.rs  mod.rs
libpolymesh/src/file/data/: mesh.rs  mod.rs  polymeta.rs  vector.rs
libpolymesh/src/file/data/generate/: mod.rs  shapes.rs  write.rs
libpolymesh/src/read/: mod.rs  read.rs
libpolymesh/src/util/: flatlist.rs  io.rs  mod.rs
libpolymesh/src/util/dedupe/: search.rs
libpolymesh/src/write/: mod.rs  pack.rs  write.rs
tools/pfmpack/: Cargo.toml
tools/pmfcube/: Cargo.toml
tools/pmfcube/src/: main.rs
tools/pmfextract/: Cargo.toml
tools/pmfextract/src/: main.rs
tools/pmfpack/: Cargo.toml
tools/pmfpack/src/: main.rs
tools/pmftree/: Cargo.toml
tools/pmftree/src/: main.rs
tools/pmfview/: Cargo.toml
tools/pmfview/src/: main.rs
tools/vox2pmf/: Cargo.toml
tools/vox2pmf/src/: main.rs  main.rs.old
