[package]
name = "libpolymesh"
version = "1.0.0"
description = "The core PolyMesh library"
readme = "../README.md"
license-file = "../LICENSE"
repository = "https://github.com/Ewpratten/polymesh"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
flate2 = "1.0"
tar = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
derivative = "2.2.0"
derive_more = "0.99.13"
indicatif = { version = "0.15.0", optional = true }
tempdir = "0.3.7"

[features]
progress_bars = ["indicatif"]
