[package]
name = "pmfcube"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
libpolymesh = { path = "../../libpolymesh" }
tempdir = "0.3.7"