[package]
name = "pmftree"
version = "0.1.0"
description = "A utility tool that creates a tree-like listing of PolyMesh files"
readme = "../../README.md"
license-file = "../../LICENSE"
repository = "https://github.com/Ewpratten/polymesh"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
libpolymesh = { path = "../../libpolymesh", version = "" }
colored = "2.0.0"