[package]
name = "pmfview"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
libpolymesh = { path = "../../libpolymesh" }
raylib = "3.5.0"
tempdir = "0.3.7"
itertools = "0.10.0"
indicatif = "0.15.0"