[package]
name = "vox2pmf"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
libpolymesh = { path = "../../libpolymesh" }
dot_vox = "4.1.0"
serde_json = "1.0"
hex = "0.4.3"
indicatif = "0.15.0"